<resources>
    <string name="app_name">HungerBox</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_view_header_title">HungerBox</string>
    <string name="title_login">Login</string>
    <string name="title_add_recipe">Add recipe</string>
    <string name="title_register">Register</string>

    <string name="msg_mandatory_fields">All fields are mandatory.</string>
    <string name="msg_dialog">Dialog</string>

    <string name="error_msg_login">Failed to login.</string>
    <string name="error_msg_register">Failed to register.</string>
    <string name="msg_recipe_name">Recipe Name</string>
    <string name="title_select_category">Select a category</string>
    <string name="msg_veg">Vegetarian</string>
    <string name="msg_non_veg">Non-Vegetarian</string>
    <string name="title_servings">Servings</string>
    <string name="msg_serving_counts">Servings count</string>
    <string name="title_prepare_time">Preparation time</string>
    <string name="title_cooking_time">Cooking time</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_directions">Directions</string>
    <string name="msg_description">Description</string>
    <string name="msg_email">Email</string>
    <string name="msg_password">Password</string>
    <string name="msg_login">Login</string>
    <string name="msg_register">Register</string>
    <string name="msg_delete_ingredient">Delete ingredient</string>
    <string name="msg_add_ingredient">Add Ingredient</string>
    <string name="msg_add_direction">Add Direction</string>
    <string name="text_add">Add</string>


</resources>
