<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feeds_fragment"
        android:icon="@drawable/drawable_selector_feeds"
        android:title="@string/title_feeds" />

    <item
        android:id="@+id/navigation_explore_fragment"
        android:icon="@drawable/drawable_selector_explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_add_recipe_fragment"
        android:icon="@drawable/ic_add_recipe"
        android:title="@string/title_add_recipe" />

    <item
        android:id="@+id/navigation_notifications_fragment"
        android:icon="@drawable/drawable_selector_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile_fragment"
        android:icon="@drawable/drawable_selector_profile"
        android:title="@string/title_profile" />

</menu>
