<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feeds_fragment">

    <fragment
        android:id="@+id/navigation_feeds_fragment"
        android:name="com.androidy.hungerbox.ui.feeds.FeedsFragment"
        android:label="@string/title_feeds"
        tools:layout="@layout/fragment_feeds" >
        <action
            app:popUpTo="@id/navigation_feeds_fragment"
            app:popUpToInclusive="true"
            android:id="@+id/action_navigation_feeds_to_navigation_register_graph"
            app:destination="@id/navigation_register_graph" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore_fragment"
        android:name="com.androidy.hungerbox.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_add_recipe_fragment"
        android:name="com.androidy.hungerbox.ui.addRecipe.AddRecipeFragment"
        android:label="@string/title_add_recipe"
        tools:layout="@layout/fragment_add_recipe" >
        <action
            app:popUpTo="@id/navigation_feeds_fragment"
            app:popUpToInclusive="true"
            android:id="@+id/action_navigation_add_recipe_fragment_to_navigation_feeds_fragment"
            app:destination="@id/navigation_feeds_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications_fragment"
        android:name="com.androidy.hungerbox.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile_fragment"
        android:name="com.androidy.hungerbox.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <include app:graph="@navigation/navigation_register_graph" />

</navigation>
