<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.loginRegister.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.androidy.hungerbox.ui.loginRegister.LoginRegisterViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/layoutToolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                layout="@layout/layout_toolbar"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutToolbar">

                <EditText
                    android:id="@+id/userEmailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Email"
                    android:hint="@string/msg_email"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmailTil">

                <EditText
                    android:id="@+id/userPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Password"
                    android:hint="@string/msg_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/msg_login"
                android:onClick="@{() -> viewModel.loginUser()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPasswordTil" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.openRegisterPage()}"
                android:text="@string/msg_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>